Refactored role fields