@@ -6,9 +6,10 @@ import org.springframework.transaction.annotation.Transactional;
 import ru.mirea.secureapp.models.Role;
 import ru.mirea.secureapp.repositories.RoleRepository;
 
+import java.util.Collection;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class RoleService {
@@ -22,13 +23,43 @@ public class RoleService {
     }
 
     @Transactional(readOnly = true)
-    public List<Role> getRolesRights(){
-        return roleRepository.findAll().stream().filter(i -> i.getId() > 2).peek(j -> {
-            if (Objects.equals(j.getName(), "ROLE_VIEWER"))
-                j.setName("Читатель");
-            if (Objects.equals(j.getName(), "ROLE_EDITOR"))
-                j.setName("Редактор");
-        }).toList();
+    public List<Role> getNamedRoles() {
+        return roleRepository.findAll().stream()
+                .map(r -> new Role(r.getId(), r.getName(), getRoleUserName(r.getName())))
+                .collect(Collectors.toList());
+    }
+
+    public List<Role> processRoles(Collection<Role> roles){
+        return roles.stream()
+                .map(r -> new Role(r.getId(), r.getName(), getRoleUserName(r.getName())))
+                .collect(Collectors.toList());
+    }
+
+    private static String getRoleUserName(String roleName) {
+        switch (roleName) {
+            case "ROLE_ADMIN" -> {
+                return "Админ";
+            }
+            case "ROLE_USER" -> {
+                return "Пользователь";
+            }
+            case "ROLE_VIEWER" -> {
+                return "Читатель";
+            }
+            case "ROLE_EDITOR" -> {
+                return "Редактор";
+            }
+            default -> {
+                return roleName;
+            }
+        }
+    }
+
+    @Transactional(readOnly = true)
+    public List<Role> getRolesRights() {
+        return roleRepository.findAll().stream().filter(i -> i.getId() > 2)
+                .map(j -> new Role(j.getId(), j.getName(), getRoleUserName(j.getName())))
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
